--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,12 @@
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
 @config "../../tailwind.config.js";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 body,
 html {
