--- a/resources/js/notus/assets/styles/index.css
+++ b/resources/js/notus/assets/styles/index.css
@@ -1,3 +1,5 @@
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
 @config "../../tailwind.config.js";
 
 @tailwind base;
@@ -5,3 +7,5 @@
 @tailwind components;
 
 @tailwind utilities;
+
+
