added theme color to advertiser pages

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -84,6 +84,7 @@ html {
         --sidebar-accent-foreground: 240 4.8% 95.9%;
         --sidebar-border: 0 0% 15.9%;
         --sidebar-ring: 217.2 91.2% 59.8%;
+        --pri: #1f2937
     }
 }
 
